--- a/learn/baiduIndex.html
+++ b/learn/baiduIndex.html
@@ -33,25 +33,27 @@
 	<div id="bottom">
 		<div class="erweima">
 			<img src="image/baidu/baidu_erweima.png">
-			<div><b>手机百度</b>
+			<div>
+				<b>手机百度</b>
 				<p>快人一步</p>
 			</div>
 		</div>
 		<div class="erweima">
 			<img src="image/baidu/baidu_erweima.png">
-			<div><b>百度糯米</b>
+			<div>
+				<b>百度糯米</b>
 				<p>一元大餐</p>
 			</div>
 		</div>
-		<div id="message">
-			<ul>
-				<li><a href="#">把百度设为首页</a></li>
-				<li><a href="#">关于百度</a></li>
-				<li><a href="#">About Baidu</a></li>
-			</ul>
-			<p>©2016&nbsp;Baidu<a>&nbsp;使用百度前必读</a>&nbsp;<a>意见反馈</a>&nbsp;京ICP证030173号<i id="icon1"></i></p>
-		</div>
+
+		<ul class="about">
+			<li><a href="#">把百度设为首页</a></li>
+			<li><a href="#">关于百度</a></li>
+			<li><a href="#">About Baidu</a></li>
+		</ul>
+		<p class="message">©2016&nbsp;Baidu<a>&nbsp;使用百度前必读</a>&nbsp;<a>意见反馈</a>&nbsp;京ICP证030173号<i id="icon1"></i></p>
 	</div>
+
 </body>
 
 </html>
