添加了更多产品的js显示效果

--- a/learn/baiduIndex.html
+++ b/learn/baiduIndex.html
@@ -5,6 +5,7 @@
 	<meta charset="UTF-8">
 	<title>百度首页DEMO</title>
 	<link href="style/baidu.css" type="text/css" rel="stylesheet">
+	<script src="script/baiduIndex.js"></script>
 </head>
 
 <body>
@@ -18,11 +19,50 @@
 				<li class="link"><a href="#" class="unuser">视频</a></li>
 				<li class="link"><a href="#" class="unuser">贴吧</a></li>
 				<li class="link"><a href="#" class="user">登陆</a></li>
-				<li class="link"><a href="#" class="user">设置</a></li>
+				<li class="link"><a href="#" class="user">设置</a>
+					<ul>
+						<li><a href="#">选项</a></li>
+						<li><a href="#">选项</a></li>
+						<li><a href="#">选项</a></li>
+						<li><a href="#">选项</a></li>
+					</ul>
+				</li>
 				<li id="more-production" class="link">更多产品</li>
 			</ul>
 		</div>
 	</div>
+	<ul id="sidebar">
+		<li>
+			<a href="#"><img src="image/baidu/item.png" alt="">
+				<p>项目描述</p>
+			</a>
+		</li>
+		<li>
+			<a href="#"><img src="image/baidu/item.png" alt="">
+				<p>项目描述</p>
+			</a>
+		</li>
+		<li>
+			<a href="#"><img src="image/baidu/item.png" alt="">
+				<p>项目描述</p>
+			</a>
+		</li>
+		<li>
+			<a href="#"><img src="image/baidu/item.png" alt="">
+				<p>项目描述</p>
+			</a>
+		</li>
+		<li>
+			<a href="#"><img src="image/baidu/item.png" alt="">
+				<p>项目描述</p>
+			</a>
+		</li>
+		<li>
+			<a href="#"><img src="image/baidu/item.png" alt="">
+				<p>项目描述</p>
+			</a>
+		</li>
+	</ul>
 	<div id="main">
 		<img src="image/baidu/baidu_logo.png">
 		<div id="search">
